pack java options into array for local build script